k8s/api-gateway/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: api-gateway
  namespace: microservices-demo

spec:
  selector:
    app: api-gateway

  ports:
  - port: 3000
    targetPort: 3000

  type: ClusterIP
