k8s/api-gateway/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: api-gateway-ingress
  namespace: microservices-demo

spec:
  ingressClassName: nginx

  rules:
  - host: microservices-demo.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api-gateway
            port:
              number: 3000
